
2/24/2023 : Karl 
- ViewUsersReport pipeline
- ToggleFeedbackHidden pipeline 
- ViewFeedbackSection pipeline 
- Assign AdminControllers to admins 
- Store.IsAdmin 
- Controller.GetControllerType() 
- user list in cli and usermanager


2/19/2023: Karl
- Implemented CommentVote 
- Changed communication.CommentVote.Value to type int16 and the type in the table to match. Also made table value non-null. 
- GetVotesForCommentAndCategoryByUser, CreateCommentVote, DeleteCommentVote, UpdateCommentVote queries
- controller.HandleCommandVoteComment, server.voteComment for the API path


2/18/2023: All group members
- Fixed null-comment bugs ( making the slice was starting with empty structs, capacity was being passed in as length)
- Fixed no comments being pulled from database (comment.sql error) ; was querying based on comment id not path id 
- Make all domains and paths lowercase for consistency

2/18/2023: Karl
- in store, created transformGeneratedCommentToCommunicationComment
- in store, created NewComment
- CreateComment and GetCommentByID generated funcs
- HandleCommandCommentReply
- fixed nextResponse bug: next responses weren't clearing after succesful responses and front ends were receiving all old responses
- Page is now responsible for calling user.SetPage 
- Page.NewComment 
- New CLI functions for page manager, such as GetPageInfo and GetPagesList
- route_newComment.go


2/17/2023: Karl
- Page.GetComments 
- HandleCommandGetComments in guest and member controllers (separate, because different maps get updated)
- endpoint listener
- path extract regex in package util, and unit tests (pretty tough regex to right, and we should test it more!)
- store.GetComments now handles performing multiple queries to construct appropriate comment responses
- generated path, domain, and comment code (comments.sql, domains.sql, paths.sql, comments.sql.go, domains.sql.go, paths.sql.go)
- changed page struct to break domain, path, pathID into separate things.